--- a/package.json
+++ b/package.json
@@ -70,3 +70,12 @@
     "typescript": "^5"
   }
 }
+{
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "export": "next export"
+  }
+}
